# clarityai-challenge

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: contracts.yaml  curation.yaml  mappings.yaml  paths.yaml
data/incoming/audiencepulse/2025-11-10T020015Z/: provider2.json
src/: main.py
src/core/: audit.py  gold.py  ingest.py  loader.py  planner.py  query.py  silver.py  validator.py
src/utils/: log.py
tests/: conftest.py  test_audit.py  test_gold.py  test_ingest_csv_json.py  test_loader.py  test_planner.py  test_silver.py  test_smoke_main_imports.py  test_validator_csv_json.py
