[project]
name = "movie-pipeline"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pandas", "pyyaml"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black", "mypy"]

[project.scripts]
movie-pipeline = "src.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

